anotacoes.txt
arduino --verify Blink.ino

arduino --board arduino:avr:uno --verify Blink.ino

arduino --board arduino:avr:mega --verify Blink.ino

arduino --board arduino:avr:uno --verbose-build --verify Blink.ino

arduino --board arduino:avr:uno -v --verify Blink.ino


target_platform=avr
board=uno
software=ARDUINO


arduino --get-pref

arduino --get-pref | grep 'target_p\|board\|software'

G=$(arduino --get-pref)
echo $G | xargs -n 1 | grep board

sketchbook.path=/root/Arduino

rm -rf ~/.arduino15/

----
arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs

arduino --get-pref | grep 'board'
----

arduino --board esp8266com:esp8266:nodemcu --verify NodeMCUeGoPro.ino
arduino -v --board esp8266com:esp8266:nodemcu --verify /root/Interligando-NodeMCU-e-GoPro/NodeMCUeGoPro/NodeMCUeGoPro.ino

INSTALAR
zv
python3
git




#########

docker pull debian:stretch-slim
docker pull ubuntu:18.04


--------

arduino --board esp8266com:esp8266:nodemcu --verify NodeMCUeGoPro/NodeMCUeGoPro.ino
arduino -v --board esp8266com:esp8266:nodemcu --verify NodeMCUeGoPro/NodeMCUeGoPro.ino

find . -name platform.txt


NodeMCUeGoPro:9:62: fatal error: WiFiUDP.h: No such file or directory
 #include <WiFiUDP.h> //Biblioteca necessaria para Wake On Lan
                                                              ^^
compilation terminated.


OUTPUT=$(sh -c 'arduino --board esp8266com:esp8266:nodemcu --verify NodeMCUeGoPro/NodeMCUeGoPro.ino')

arduino --board esp8266com:esp8266:nodemcu --verify NodeMCUeGoPro/NodeMCUeGoPro.ino > g2.txt 2>&1

bash cmd.sh > g.txt 2>&1 

cat g2.txt | grep '/\^/'
# cat g2.txt | grep -E ':[[:alnum:]]+:[[:alnum:]]+:[[:blank:]]e*r*r*o*r:*'
https://regex101.com/
ERROS=$(cat g2.txt | grep -E '[a-zA-Z0-9]*:[0-9]*:[0-9]*:[[:blank:]]*[a-zA-Z0-9]*[[:blank:]]error:')

echo $ERROS | cut -d ':' -f 1

------------------------------------------------------


Picked up JAVA_TOOL_OPTIONS: 
Loading configuration...
Initializing packages...
Preparing boards...
Verifying...
NodeMCUeGoPro:6:2: error: #error "message error"
 #error "message error"
  ^
NodeMCUeGoPro:9:62: fatal error: WiFiUDP.h: No such file or directory
 #include <WiFiUDP.h> //Biblioteca necessaria para Wake On Lan
                                                              ^
compilation terminated.
exit status 1